Refactor UI Control

--- a/Source/Libraries/CHCSupportUIControls/CHCSupportUIControls.vbproj
+++ b/Source/Libraries/CHCSupportUIControls/CHCSupportUIControls.vbproj
@@ -276,5 +276,8 @@
   <ItemGroup>
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Other\ReleaseNote.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
