--- a/Source/Client/CHCCli/CHCCli.vbproj
+++ b/Source/Client/CHCCli/CHCCli.vbproj
@@ -113,6 +113,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Utility\TestAdminRight.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
