--- a/Source/Client/CHCCli/CHCCli.vbproj
+++ b/Source/Client/CHCCli/CHCCli.vbproj
@@ -47,7 +47,7 @@
     <DefineDebug>false</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\..\Binary\Applications\Windows\Cli\</OutputPath>
+    <OutputPath>..\..\..\Binary\Applications\Windows\CHC Cli\</OutputPath>
     <DocumentationFile>
     </DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
